--- a/src/app/pages/new-comment/new-comment.page.html
+++ b/src/app/pages/new-comment/new-comment.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-comment</ion-title>
+    <ion-title>{{parentTweet.tweet}}</ion-title>
+    <ion-title class="user" size="small">{{getAuthor(parentTweet)}}</ion-title>
     <ion-buttons slot="end">
         <ion-button color="dark" (click)="dismiss()">
           <ion-icon slot="icon-only" name="close"></ion-icon>
@@ -18,14 +19,13 @@
           <ion-item>
             <ion-label>
               <h2>{{comment.tweet}}</h2>
-      <!--
-              <p *ngIf="comment._author; else userDeleted" class="user">
-                {{ getAuthor(comment) }} 
-              </p>
+              <p *ngIf="tweet._author; else userDeleted" class="user" [class.me]="canEdit(comment)">
+                  {{ getAuthor(comment) }} 
+                  <ion-icon *ngIf="canEdit(comment)" name="heart" color="danger-tint"></ion-icon> 
+                </p>
               <ng-template #userDeleted>
                 <p class="user-deleted">User deleted</p>
               </ng-template>
-        -->
       
             </ion-label>
             <ion-note slot="end">{{ comment.created_at }}</ion-note>
