--- a/src/app/pages/new-comment/new-comment.page.scss
+++ b/src/app/pages/new-comment/new-comment.page.scss
@@ -10,3 +10,10 @@
     font-weight: bold;
     color: var(--ion-color-danger-tint);
 }
+#lista_commenti{
+    padding-left: 15%;
+    background-color: lightblue;
+}
+#comment_field{
+    padding-bottom: 0%;
+}
