--- a/src/app/pages/tweets/tweets.page.scss
+++ b/src/app/pages/tweets/tweets.page.scss
@@ -16,7 +16,12 @@
 }
 .like{
     color: var(--ion-color-primary);
+    font-size: 20px;
 }
 .liked{
     color: var(--ion-color-danger-tint);
+    font-size: 20px;
+}
+.comment-size{
+    font-size: 20px;
 }
