--- a/src/app/pages/tweets/tweets.page.scss
+++ b/src/app/pages/tweets/tweets.page.scss
@@ -15,11 +15,7 @@
     margin-right: 5%;
 }
 .like{
-    color: var(--ion-color-primary);
-    font-size: 20px;
-}
-.liked{
-    color: var(--ion-color-danger-tint);
+    color: red;
     font-size: 20px;
 }
 .comment-size{
