--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -20,6 +20,11 @@
       <ion-icon name="contact"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="favourites">
+      <ion-icon name="star"></ion-icon>
+      <ion-label>Favourites</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
