--- a/src/app/pages/tweets/tweets.page.scss
+++ b/src/app/pages/tweets/tweets.page.scss
@@ -11,7 +11,7 @@
     color: var(--ion-color-danger-tint);
 }
 #like_zone{
-    background-color: lightgray;
+    background-color: white;
     margin-right: 5%;
 }
 .like{
@@ -20,4 +20,7 @@
 }
 .comment-size{
     font-size: 20px;
+}
+#contatore{
+    color:black;
 }
