--- a/src/app/pages/tweets/tweets.page.html
+++ b/src/app/pages/tweets/tweets.page.html
@@ -1,13 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>tweets</ion-title>
+    <p>
+      <ion-searchbar placeholder="Ricerca per Hashtag" (ionChange)="getFilteredTweets($event.target.value)" (ionClear)="getTweets()" ></ion-searchbar>
+    </p>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <p>
-    <ion-searchbar placeholder="Ricerca per Hashtag" (ionChange)="getFilteredTweets($event.target.value)" (ionClear)="getTweets()" ></ion-searchbar>
-  </p>
+
   <ion-list>
 
     <ion-item-sliding *ngFor="let tweet of tweets">
@@ -29,7 +30,8 @@
             <p class="user-deleted">User deleted</p>
           </ng-template>
           <ion-icon class='comment-size' name="md-chatbubbles" (click)="createComment(tweet)" ></ion-icon>
-          <ion-icon (click)="addfavourite(tweet)" class="star-size" [name]="favouriteSetted(tweet) ? 'star' : 'star-outline'"></ion-icon> 
+          <ion-icon class="star-size" [name]="favouriteSetted(tweet) ? 'star' : 'star-outline'" (click)="addfavourite(tweet)"></ion-icon> 
+          
         </ion-label>
         <ion-note slot="end">{{ tweet.created_at | unictDate: 1 }}</ion-note>
       </ion-item>
