Delete dei comments

--- a/src/app/pages/new-comment/new-comment.page.html
+++ b/src/app/pages/new-comment/new-comment.page.html
@@ -18,7 +18,7 @@
     
           <ion-item id='lista_commenti'>
             <ion-label>
-              <h2>{{comment.tweet}}</h2>
+              <ion-input [readonly]="!canEdit(comment)" [(ngModel)]="comment.tweet"></ion-input>
               <p *ngIf="tweet._author; else userDeleted" class="user" [class.me]="canEdit(comment)"> <!-- SISTEMARE QUI-->
                   {{ getAuthor(comment) }} 
                   <ion-icon *ngIf="canEdit(comment)" name="heart" color="danger-tint"></ion-icon> 
@@ -30,6 +30,11 @@
             </ion-label>
             <ion-note slot="end">{{ comment.created_at }}</ion-note>
           </ion-item>
+          <ion-item-options *ngIf="canEdit(comment)" side="end">
+            <ion-item-option color="danger" (click)="deleteComment(comment)">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
         </ion-item-sliding>
     
       </ion-list>
