--- a/src/app/pages/new-comment/new-comment.page.scss
+++ b/src/app/pages/new-comment/new-comment.page.scss
@@ -11,6 +11,10 @@
     color: var(--ion-color-danger-tint);
 }
 #lista_commenti{
-    padding-left: 15%;
-    background-color: lightblue;
+    padding-left: 8%;
+    background-color: lightgrey;
 }
+#wrappato{
+    word-wrap: break-word; 
+}
+
